# gud-gadget

./: .gitignore  Cargo.toml  README.md
drm/: Cargo.toml
drm/src/: main.rs
gadget/: Cargo.toml
gadget/src/: lib.rs
gud-gadget/: Cargo.toml
gud-gadget-drm/: Cargo.toml  README.md
gud-gadget-drm/src/: main.rs
gud-gadget/src/: lib.rs
