[package]
name = "gud-gadget"
version = "0.1.0"
edition = "2021"

[dependencies]
gadgetry-most-foul = { git = "https://github.com/samcday/gadgetry-most-foul.git" }
serde = { version = "1.0.197", features = ["derive"] }
tracing = "0.1.40"
thiserror = "1.0.57"
anyhow = "1.0.80"
ssmarshal = "1.0.0"
bytes = "1.5.0"
lz4 = "1.24.0"
