[package]
name = "gud-gadget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usb-gadget = "0.6.0"
serde = { version = "1.0.197", features = ["derive"] }
tracing = "0.1.40"
thiserror = "1.0.57"
anyhow = "1.0.80"
ssmarshal = "1.0.0"
bytes = "1.5.0"
