[package]
name = "gud-gadget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usb-gadget = { version = "0.6.0", git = "https://github.com/surban/usb-gadget.git", rev = "897c511" }
serde = { version = "1.0.197", features = ["derive"] }
tracing = "0.1.40"
thiserror = "1.0.57"
anyhow = "1.0.80"
ssmarshal = "1.0.0"
bytes = "1.5.0"
lz4 = "1.24.0"
